# cySkat

./: .clang-format  .clang-tidy  CMakeLists.txt
src/: main.cpp  types.hpp
src/game/: Game.cpp  Game.hpp  Player.cpp  Player.hpp
src/structures/: Card.cpp  Card.hpp  Dealer.cpp  Dealer.hpp  Deck.cpp  Deck.hpp  Hand.cpp  Hand.hpp  Table.cpp  Table.hpp
